Here added to python files which has two different type of accuracy, oen give simple prompt and one give more technical prompt

--- a/yahboom_rosmaster_navigation/CMakeLists.txt
+++ b/yahboom_rosmaster_navigation/CMakeLists.txt
@@ -43,6 +43,7 @@ install(PROGRAMS
   scripts/test_nav_to_pose.py
   scripts/obstacle_manager.py
   scripts/social_navigation.py
+  scripts/social_navigation_accuracy.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
